se agrego nueva tarea de avance de tarjeta, se ajusto tabla y se ajuste pantalla de intereses para agregar los neuvos tipos de avance y compra de cartera ademas de nueva pagina para ver los periodos cargados y poder ver el detalle de cada uno
Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout-sw600dp-land/bought_item_list.xml
+++ b/app/src/main/res/layout-sw600dp-land/bought_item_list.xml
@@ -36,7 +36,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvMonthItemTCC"
+            android:id="@+id/tvListPeriodItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -47,7 +47,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvCutOffDayICC"
+            android:id="@+id/tvListPeriodInterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -65,7 +65,7 @@
             android:text="/" />
 
         <TextView
-            android:id="@+id/tvStatusICC"
+            android:id="@+id/tvListPeriodCapital"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
@@ -191,7 +191,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvWarningICC"
+            android:id="@+id/tvListPeriodTotalQuote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
