--- a/app/src/main/res/layout/bought_item_list.xml
+++ b/app/src/main/res/layout/bought_item_list.xml
@@ -39,7 +39,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvMonthItemTCC"
+            android:id="@+id/tvListPeriodItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -112,7 +112,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvCutOffDayICC"
+            android:id="@+id/tvListPeriodInterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -132,7 +132,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvStatusICC"
+            android:id="@+id/tvListPeriodCapital"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -215,7 +215,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvWarningICC"
+            android:id="@+id/tvListPeriodTotalQuote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
