--- a/app/src/main/res/layout-land/bought_item_list.xml
+++ b/app/src/main/res/layout-land/bought_item_list.xml
@@ -34,7 +34,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvMonthItemTCC"
+            android:id="@+id/tvListPeriodItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -45,7 +45,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvCutOffDayICC"
+            android:id="@+id/tvListPeriodInterest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -64,7 +64,7 @@
             android:text="/" />
 
         <TextView
-            android:id="@+id/tvStatusICC"
+            android:id="@+id/tvListPeriodCapital"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
@@ -186,7 +186,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvWarningICC"
+            android:id="@+id/tvListPeriodTotalQuote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
