--- a/app/src/main/res/layout/credit_card_item_list.xml
+++ b/app/src/main/res/layout/credit_card_item_list.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvMonthItemTCC"
+                android:id="@+id/tvListPeriodItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -76,7 +76,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvCutOffDayICC"
+                android:id="@+id/tvListPeriodInterest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
@@ -96,7 +96,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvStatusICC"
+                android:id="@+id/tvListPeriodCapital"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -123,7 +123,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/tvWarningICC"
+                android:id="@+id/tvListPeriodTotalQuote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
