--- a/app/src/main/res/layout/tax_item_list.xml
+++ b/app/src/main/res/layout/tax_item_list.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvMonthItemTCC"
+                android:id="@+id/tvListPeriodItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
